--- a/src/gui.html
+++ b/src/gui.html
@@ -9,5 +9,7 @@
 <p id="repolist">Getting repos...</p>
 <HR WIDTH="50%" SIZE="3" NOSHADE>
 <h2>Install</h2>
-<button href="javascript:var toInstall = prompt('Please type the name of the package to install!', ''); checkRepo(toInstall);">Add Repo</button>
-<p id="consoleoutput">Nothing is here. Something will appear as soon as you install something!</p>
+<button href="javascript:var toInstall = prompt('Please type the name of the package to install!', ''); install(toInstall);">Add Repo</button>
+<HR WIDTH="50%" SIZE="3" NOSHADE>
+<h2>Log</h2>
+<p id="consoleoutput">Nothing is here. Something will appear as soon as you do something!</p>
